    General stays responsive.

*** Support for more bullets (coq 8.5): -- --- ++ +++ ** ***
    Scripting supports bullets of any length. 
    Indentation supports only bullets of length <= 4 (like ----). Longer
    may be supported if needed.

*** smie indentation is now the only choice.
    Old code removed. will work only if emacs >= 23.3.

*** indentation of match with cases:
    by default the indentation is like this now:
    match n with
      O => ...
    | S n => ...
    end
    do this: (setq coq-match-indent 4) to get back the
    previous indetation style:
    match n with
        O => ...
      | S n => ...
    end    

*** indentation now supports { at end of line:
    example:

    assert (h:n = k). {
      apply foo.
      reflexivity. }
    apply h.

*** Default indentation of forall and exists is not boxed anymore
    For instance, this is now indented like this:

       Lemma foo: forall x y,
           x = 0 -> ... .
    instead of:
       Lemma foo: forall x y,
                    x = 0 -> ... .
    do this: (setq coq-indent-box-style t) to bring the box style back.

*** Default indentation cases of "match with" are now indented by 2 instead of 4.
     "|" is indented by zero:

        match n with                   
          0 => ...	     
        | S n => ...                   
        end                            
     instead of: 
        match n with  
            0 => ...       
          | S n => ...
        end
     do this: (setq coq-match-indent 4) to bring old behaviour back.

*** Support for bullets, braces and Grab Existential Variables for Prooftree.

*** Support for _Coqproject files

    According to Coq documentation, it is advised to use coq_makefile
    -f _CoqProject -o Makefile to build your Makefile automatically
    from "profect file" _CoqProject. Such a file should contain the
    options to pass to coq_makefile, i.e. paths to add to coq load
    path (-I, -R) and other options to pass to coqc/coqtop (-arg).
